added skills content

--- a/index.html
+++ b/index.html
@@ -48,21 +48,69 @@
           meets clients requirements in our mata.
         </p>
         <div class="about-info-container">
-            <div class="about-info">
-                <p class="info-title">Name:</p>
-                <p class="info-description">Mary Hardy</p>
-            </div>
-            <div class="about-info">
-                <p class="info-title">Email:</p>
-                <p class="info-description">info@gmail.com</p>
-            </div>
-            <div class="about-info">
-                <p class="info-title">Speciality:</p>
-                <p class="info-description">Web Dev</p>
-            </div>
-            <div class="about-info">
-                <p class="info-title">Location:</p>
-                <p class="info-description">Dhaka, BD</p>
+          <div class="about-info">
+            <p class="info-title">Name:</p>
+            <p class="info-description">Mary Hardy</p>
+          </div>
+          <div class="about-info">
+            <p class="info-title">Email:</p>
+            <p class="info-description">info@gmail.com</p>
+          </div>
+          <div class="about-info">
+            <p class="info-title">Speciality:</p>
+            <p class="info-description">Web Dev</p>
+          </div>
+          <div class="about-info">
+            <p class="info-title">Location:</p>
+            <p class="info-description">Dhaka, BD</p>
+          </div>
+        </div>
+      </section>
+      <!-- what i do section -->
+      <section class="what-i-do">
+        <h3 class="section-title">What I Do</h3>
+        <!-- .skills-container>.skill*4>img+p.skill-title+p.skill-description>lorem15 -->
+        <div class="skills-container">
+          <div class="skill">
+            <img src="images/icons/js.png" alt="" />
+            <p class="skill-title">Vanilla Javascript</p>
+            <p class="skill-description">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Asperiores distinctio quasi officiis temporibus est iste.
+            </p>
+          </div>
+          <div class="skill">
+            <img src="images/icons/react.png" alt="" />
+            <p class="skill-title">React</p>
+            <p class="skill-description">
+              Corrupti adipisci blanditiis at consequatur, minima cumque minus
+              modi fuga? Ex placeat quidem ipsa consequatur.
+            </p>
+          </div>
+          <div class="skill">
+            <img src="images/icons/mongo.png" alt="" />
+            <p class="skill-title">MongoDB</p>
+            <p class="skill-description">
+              Reprehenderit aliquam itaque, quisquam quaerat, veniam beatae,
+              sapiente quasi ipsam facere tempora dolorem exercitationem earum!
+            </p>
+          </div>
+          <div class="skill">
+            <img src="images/icons/nodejs.png" alt="" />
+            <p class="skill-title">Node JS</p>
+            <p class="skill-description">
+              Delectus nostrum modi perspiciatis quasi aliquam vel molestiae
+              quia! Minus mollitia rerum quia repellendus similique.
+            </p>
+          </div>
+        </div>
+      </section>
+      <!--Resume section -->
+      <section class="resume">
+        <h3 class="section-title">A summary of My Resume</h3>
+        <div class="resume-content">
+            <div>
+                
             </div>
         </div>
       </section>
