--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       href="https://fonts.googleapis.com/css2?   family=Open+Sans&family=Splash&display=swap"
       rel="stylesheet"
     />
+    <script src="https://kit.fontawesome.com/13f5562986.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <header class="header">
@@ -20,7 +21,7 @@
         <ul>
           <li>Portfolio</li>
           <li>Blogs</li>
-          <li><button class="btn-primary">Hire</button></li>
+          <li><button class="btn-primary">Hire Me</button></li>
         </ul>
       </nav>
       <!-- header banner -->
@@ -32,7 +33,7 @@
             Shot what able cold new see hold.Friendly as an betrayed formerly
             he. Morning because as to society behaved moments.
           </p>
-          <button class="btn-primary">Download CV</button>
+          <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button>
         </div>
         <img src="images/hardy.png" alt="" />
       </div>
@@ -175,7 +176,7 @@
           </div>
         </div>
         <div class="resume-button">
-          <button class="btn-primary">Download CV</button>
+          <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button>
         </div>
       </section>
       <!-- contact section -->
