--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
       href="https://fonts.googleapis.com/css2?   family=Open+Sans&family=Splash&display=swap"
       rel="stylesheet"
     />
-    <script src="https://kit.fontawesome.com/13f5562986.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/13f5562986.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <header class="header">
@@ -33,7 +36,9 @@
             Shot what able cold new see hold.Friendly as an betrayed formerly
             he. Morning because as to society behaved moments.
           </p>
-          <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button>
+          <button class="btn-primary">
+            <i class="fa-solid fa-download"></i> Download CV
+          </button>
         </div>
         <img src="images/hardy.png" alt="" />
       </div>
@@ -121,7 +126,7 @@
                 commodo ligula eget dolor.
               </p>
             </div>
-            <hr>
+            <hr />
             <div class="resume-item">
               <h4 class="title">Master in Computer Engineering</h4>
               <h5 class="sub-title">Harvard University / 2015 - 2017</h5>
@@ -131,7 +136,7 @@
                 commodo ligula eget dolor.
               </p>
             </div>
-            <hr>
+            <hr />
             <div class="resume-item">
               <h4 class="title">Master in Computer Engineering</h4>
               <h5 class="sub-title">Harvard University / 2015 - 2017</h5>
@@ -145,28 +150,28 @@
           <div>
             <h3 class="resume-title">My Experience</h3>
             <div class="resume-item">
-              <h4 class="title">Master in Computer Engineering</h4>
-              <h5 class="sub-title">Harvard University / 2015 - 2017</h5>
+              <h4 class="title">Sr. Font End Developer</h4>
+              <h5 class="sub-title">Apple Inc / 2020 - Current</h5>
               <p class="description">
                 List skill/technologies here. You can change the icon above to
                 any of the 1500+ FontAwesome 5 free icons available. Aenean
                 commodo ligula eget dolor.
               </p>
             </div>
-            <hr>
+            <hr />
             <div class="resume-item">
-              <h4 class="title">Master in Computer Engineering</h4>
-              <h5 class="sub-title">Harvard University / 2015 - 2017</h5>
+              <h4 class="title">Jr. Font End Developer</h4>
+              <h5 class="sub-title">Dribbble Inc / 2018 - 2022</h5>
               <p class="description">
                 List skill/technologies here. You can change the icon above to
                 any of the 1500+ FontAwesome 5 free icons available. Aenean
                 commodo ligula eget dolor.
               </p>
             </div>
-            <hr>
+            <hr />
             <div class="resume-item">
-              <h4 class="title">Master in Computer Engineering</h4>
-              <h5 class="sub-title">Harvard University / 2015 - 2017</h5>
+              <h4 class="title">HTML Developer</h4>
+              <h5 class="sub-title">Adobe Inc / 2017 - 2018</h5>
               <p class="description">
                 List skill/technologies here. You can change the icon above to
                 any of the 1500+ FontAwesome 5 free icons available. Aenean
@@ -176,31 +181,42 @@
           </div>
         </div>
         <div class="resume-button">
-          <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button>
+          <button class="btn-primary">
+            <i class="fa-solid fa-download"></i> Download CV
+          </button>
         </div>
       </section>
       <!-- contact section -->
       <section class="contact">
         <div>
           <h3 class="section-title">Let's Connect</h3>
-          <p class="section-description">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+          <p class="section-description">
+            Please fill out the form on this section to contact with me or call
+            between 9:00 A.M and 8.00 P.M ET, Monday through Friday.
+          </p>
           <a href="">
-            <img src="images/icons/facebook.png" alt="">
+            <img src="images/icons/facebook.png" alt="" />
           </a>
           <a href="">
-            <img src="images/icons/twitter.png" alt="">
+            <img src="images/icons/twitter.png" alt="" />
           </a>
           <a href="">
-            <img src="images/icons/insta.png" alt="">
+            <img src="images/icons/insta.png" alt="" />
           </a>
         </div>
         <div>
           <h3 class="section-title">Let's Massage me</h3>
           <form action="">
-            <input type="text" name="" id="" placeholder="Your Name">
-            <input type="email" name="" id="" placeholder="Your Email">
-            <textarea name="" id="" cols="30" rows="10" placeholder="Message"></textarea>
-            <input class="btn-primary" type="submit" value="Submit">
+            <input type="text" name="" id="" placeholder="Your Name" />
+            <input type="email" name="" id="" placeholder="Your Email" />
+            <textarea
+              name=""
+              id=""
+              cols="30"
+              rows="10"
+              placeholder="Message"
+            ></textarea>
+            <input class="btn-primary" type="submit" value="Submit" />
           </form>
         </div>
       </section>
